@@ -22,7 +22,7 @@ $max_dict_key = array
 	'0.17.2' => 1150,
 	'0.17.3' => 1150,
 	'0.17.4' => 1150,
-	'0.17.5' => 1321,
+	'0.17.5' => 1322,
 );
 
 define ('TAGNAME_REGEXP', '^[[:alnum:]]([\. _~-]?[[:alnum:]])*$');
