@@ -139,7 +139,7 @@ INSERT INTO `PortInterfaceCompat` VALUES
 (7,1081),(7,30),(7,35),(7,36),(7,37),(7,38),(7,39),(7,40),
 (8,1082),(8,30),(8,35),(8,36),(8,37),(8,38),(8,39),(8,40),
 (9,1084),(9,30),(9,35),(9,36),(9,37),(9,38),(9,39),(9,40),
-(1,16),(1,19),(1,24),(1,29),(1,31),(1,33),(1,446),(1,681),(1,682);
+(1,16),(1,19),(1,24),(1,29),(1,31),(1,33),(1,446),(1,681),(1,682),(1,1322);
 
 INSERT INTO `PortCompat` (`type1`, `type2`) VALUES
 (17,17),
@@ -180,7 +180,8 @@ INSERT INTO `PortCompat` (`type1`, `type2`) VALUES
 (28,27),
 (28,1204),
 (30,30),
-(16,16),
+(16,1322),
+(1322,16),
 (29,681),
 (29,682),
 (32,32),
